--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -2335,7 +2335,7 @@ ol {
 }
 
 .shopping__cart__table table tbody tr td.product__cart__item .product__cart__item__pic {
-	float: left;
+	/* float: left; */
 	margin-right: 30px;
 }
 
