add banner and some fixes

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -23,6 +23,7 @@ html{
   flex-direction: column;
   height: 100vh;
   width: 100vw;
+  /* background-color: #EFEDEC; */
 
   /* background-color: #EFEDEC;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23cacaca' fill-opacity='0.15'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.15'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E"); */
@@ -39,15 +40,21 @@ html{
   display: flex;
   flex-direction: row;
 
+  padding: 0;
+
   /* border-bottom: solid 1px white; */
 }
   .left-content img{
     width: 80px;
     height: 80px;
   }
-  /* .right-content {
-
-  } */
+  .right-content {
+    padding: 0;
+    margin: 0;
+  }
+    .dropdown-1{
+      margin: 0;
+    }
   .btn-secondary{
     color: #EFEDEC;
     background-color: #FE8D27;
@@ -138,12 +145,39 @@ html{
 /* HOMEPAGE  */
 
 .home{
-  height: 100%;
-  
+  /* height: 100%; */
+  width: 100vw;
   display:flex;
   
   flex-direction: column
 }
+  .home-banner{
+    width: 100vw;
+    display: flex;
+    /* flex-flow: row nowrap; */
+
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+
+    scroll-snap-type: x mandatory; 
+  }
+  .home-banner img{
+    width: 100vw;
+    flex-shrink: 0;
+    height: auto;
+
+    scroll-snap-align: start;
+    scroll-behavior: smooth;
+  }
+  /* .banner-shortcut a {
+    display: none;
+  }
+  @supports (scroll-snap-type) {
+
+  } */
+  .banner-shortcut{
+    text-align: center;
+  }
   .showcase-container{
     height: 100%;
     width: 100vw;
@@ -167,10 +201,10 @@ html{
 
   .product-list-page{
     width: 100%;
-    min-height: 100%;
+    min-height: min-content;
 
-    background-color: #EFEDEC;
     padding: 10px;
+    background-color: #efedec00;
 
     display: flex;
     flex-direction: row;
@@ -180,7 +214,18 @@ html{
   }
     .product-list-card{
       margin: 10px;
+      /* max-height: min-content;s */
+      /* background-color: #efedec00 ; */
     }
+    .product-list-card .card-body{
+      /* background-color: #15fff3; */
+      max-height: 20rem;
+    }
+    /* .product-list-card .card{
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+    } */
 
   /* END PRODUCT LIST */
 
