--- a/client/src/assets/tailwind.css
+++ b/client/src/assets/tailwind.css
@@ -3,3 +3,26 @@
 @tailwind components;
 
 @tailwind utilities;
+h1 {
+    @apply text-4xl;
+}
+
+h2 {
+    @apply text-2xl;
+}
+
+h3 {
+    @apply text-xl;
+}
+
+h4 {
+    @apply text-lg;
+}
+
+h5 {
+    @apply text-sm;
+}
+
+h6 {
+    @apply text-xs;
+}
